--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     margin: 0;
     background-image: url(https://png.pngtree.com/background/20230416/original/pngtree-website-technology-line-dark-background-picture-image_2443641.jpg);
-    background-repeat: no-repeat;
+/*     background-repeat: no-repeat; */
     background-size: cover;
 }
 
