--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     background-image: url(https://png.pngtree.com/background/20230416/original/pngtree-website-technology-line-dark-background-picture-image_2443641.jpg);
 /*     background-repeat: no-repeat; */
-    background-size: cover;
+/*     background-size: cover; */
 }
 
 #nav {
