--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ body {
     justify-content: center;
     margin: 0;
     background-image: url(https://png.pngtree.com/background/20230416/original/pngtree-website-technology-line-dark-background-picture-image_2443641.jpg);
-/*     background-repeat: no-repeat; */
-/*     background-size: cover; */
+    /* background-repeat: no-repeat; */
+    background-size: cover;
 }
 
 #nav {
     position: relative;
     width: 100%;
     height: 13vh;
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
+    background-color:#2d8f85;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.529);
     display: flex;
     align-items: center;
@@ -175,13 +176,15 @@ form::before {
     filter: blur(3.5rem);
 }
 
-.footer {
+/* .footer {
     text-align: center;
+    height: 10vh;
+    width: 100%;
 }
 
 .footer p {
     color: aliceblue;
-}
+} */
 
 .marque-tag {
     color: aliceblue;
@@ -244,5 +247,31 @@ form::before {
     #item1, #item2, #item3 {
         width: 90vw;
         height: 15vh;
+    }
+}
+.footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #052b2f;
+    color: aliceblue;
+    width: 100%;
+}
+
+.footer p {
+    margin: 0;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 768px) {
+    .footer p {
+        font-size: 1rem;
+        padding: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer p {
+        font-size: 0.9rem;
+        padding: 10px;
     }
 }
